<resources>
    <string name="app_name">Weather report app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hours">Часы</string>
    <string name="days">Дни</string>
    <string name="search">Введите название города</string>
    <string name="empty">Empty</string>
    <string name="GPS">Местоположение выключенно</string>
    <string name="language">USA/Ru</string>
    <string name="city_name">City</string>
    <string name="current_temp">Current temp</string>
    <string name="max_temp">Max temp</string>
    <string name="min_temp">Min temp</string>
</resources>