<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.MainFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:alpha="0.85"
        android:src="@drawable/weather"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/blue_bg"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imWeather"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_launcher_foreground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/abril_fatface"
                android:text="18/08/2022, 15:37"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abril_fatface"
                android:text="Omsk"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imWeather" />

            <TextView
                android:id="@+id/tvCurrentTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abril_fatface"
                android:text="14°С"
                android:textColor="@color/white"
                android:textSize="60sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCity" />

            <TextView
                android:id="@+id/tvCondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abril_fatface"
                android:text="Sunny"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCurrentTemp" />

            <TextView
                android:id="@+id/tvMinMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abril_fatface"
                android:text="14°С/20°С"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCondition" />

            <ImageButton
                android:id="@+id/ibSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:background="@null"
                android:src="@drawable/ic_baseline_search_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvMinMax" />

            <ImageButton
                android:id="@+id/ibLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@null"
                android:src="@drawable/ic_baseline_add_location_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ibSearch" />

            <EditText
                android:id="@+id/edSearchCity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/search"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toStartOf="@+id/ibSearchCity"
                app:layout_constraintStart_toEndOf="@+id/ibClose"
                app:layout_constraintTop_toBottomOf="@+id/imWeather"
                tools:visibility="gone" />

            <ImageView
                android:id="@+id/ibClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_baseline_close_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imWeather"
                tools:visibility="gone" />

            <ImageView
                android:id="@+id/ibSearchCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_baseline_youtube_searched_for_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imWeather"
                tools:visibility="gone" />

            <ImageView
                android:id="@+id/ibUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:src="@drawable/ic_baseline_update_24"
                app:layout_constraintBottom_toBottomOf="@+id/tvData"
                app:layout_constraintStart_toEndOf="@+id/tvData"
                app:layout_constraintTop_toTopOf="@+id/tvData"
                app:layout_constraintVertical_bias="0.6" />

            <ImageView
                android:id="@+id/ibUSA"
                android:layout_width="42dp"
                android:layout_height="16dp"
                android:layout_marginEnd="12dp"
                android:src="@drawable/usa"
                app:layout_constraintBottom_toBottomOf="@+id/imWeather"
                app:layout_constraintEnd_toStartOf="@+id/imWeather"
                app:layout_constraintTop_toTopOf="@+id/imWeather" />

            <ImageView
                android:id="@+id/ibRu"
                android:layout_width="32dp"
                android:layout_height="16dp"
                android:layout_marginEnd="12dp"
                android:src="@drawable/ru"
                app:layout_constraintBottom_toBottomOf="@+id/ibUSA"
                app:layout_constraintEnd_toStartOf="@+id/ibUSA"
                app:layout_constraintTop_toTopOf="@+id/ibUSA"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tvCityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/abril_fatface"
                android:text="@string/city_name"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvCity"
                app:layout_constraintEnd_toStartOf="@+id/tvCity"
                app:layout_constraintTop_toTopOf="@+id/tvCity" />

            <TextView
                android:id="@+id/tv_current_temp"
                android:layout_width="133dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abril_fatface"
                android:text="@string/current_temp"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvCurrentTemp"
                app:layout_constraintEnd_toStartOf="@+id/tvCurrentTemp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCity"
                app:layout_constraintVertical_bias="0.507" />

            <TextView
                android:id="@+id/tvMax"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/abril_fatface"
                android:text="@string/max_temp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/tvMinMax"
                app:layout_constraintEnd_toStartOf="@+id/ibLocation"
                app:layout_constraintStart_toEndOf="@+id/tvMinMax"
                app:layout_constraintTop_toBottomOf="@+id/tvCondition"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tvMin"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/abril_fatface"
                android:gravity="right"
                android:text="@string/min_temp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/tvMax"
                app:layout_constraintEnd_toStartOf="@+id/tvMinMax"
                app:layout_constraintStart_toEndOf="@+id/ibSearch"
                app:layout_constraintTop_toBottomOf="@+id/tvCondition"
                app:layout_constraintVertical_bias="1.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:backgroundTint="@color/blue"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/tabLayout"
        app:layout_constraintStart_toStartOf="@+id/tabLayout"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

</FrameLayout>